@@ -1,73 +1,73 @@
 package org.td024.service;
 
+import org.td024.dao.ReservationRepository;
+import org.td024.dao.WorkspaceRepository;
 import org.td024.entity.Interval;
 import org.td024.entity.Reservation;
 import org.td024.entity.Workspace;
+import org.td024.exception.NotFoundException;
+import org.td024.exception.WorkspaceSaveFailed;
 
-import java.util.ArrayList;
-import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.function.BiFunction;
 
-public final class WorkspaceService {
-    private static final List<Workspace> workspaces = new ArrayList<>();
-    private static final ReservationService reservationService = new ReservationService();
-    private static int lastId = 0;
+public final class WorkspaceService extends StatefulService<Workspace> {
+    private static final String STATE_FILE_PATH = ".workspaces";
 
-    public Workspace getWorkspaceById(int id) {
-        return workspaces.stream().filter(workspace -> workspace.getId() == id).findFirst().orElse(null);
+    private final WorkspaceRepository repository;
+    private ReservationRepository reservationRepository;
+
+    private final BiFunction<Integer, Interval, Boolean> isAvailable = (Integer id, Interval interval) -> {
+        List<Reservation> reservations = reservationRepository.getAllByWorkspace(id);
+        return reservations.stream().noneMatch(reservation -> Interval.isOverlap(interval, reservation.getInterval()));
+    };
+
+    public WorkspaceService(WorkspaceRepository repository, ReservationRepository reservationRepository) {
+        super(STATE_FILE_PATH, repository);
+        this.repository = repository;
+        this.reservationRepository = reservationRepository;
+    }
+
+    public Workspace getWorkspaceById(int id) throws NotFoundException {
+        Optional<Workspace> workspace = repository.getById(id);
+        if (workspace.isEmpty()) throw new NotFoundException("Workspace not found!");
+        return workspace.get();
     }
 
     public List<Workspace> getAllWorkspaces() {
-        return workspaces;
+        return repository.getAll();
     }
 
     public List<Workspace> getAvailableWorkspaces(Interval interval) {
-        return workspaces.stream().filter(workspace -> isWorkspaceAvailable(workspace.getId(), interval)).collect(Collectors.toList());
+        List<Workspace> workspaces = repository.getAll();
+        return workspaces.stream().filter(workspace -> isAvailable(workspace.getId(), interval)).toList();
     }
 
-    public void createWorkspace(Workspace workspace) {
-        int id = ++lastId;
-
-        workspace.setId(id);
-        workspaces.add(workspace);
-
-        System.out.println("Workspace created successfully!\nWorkspace ID: " + id);
+    public int createWorkspace(Workspace workspace) {
+        return repository.save(workspace);
     }
 
-    public void editWorkspace(int id, Workspace workspace) {
-        Workspace reference = getWorkspaceById(id);
-
-        if (workspace == null) {
+    public int editWorkspace(int id, Workspace workspace) throws WorkspaceSaveFailed {
+        if (!workspaceExists(id)) {
             System.out.println("Workspace not found!");
-            return;
+            throw new WorkspaceSaveFailed("Couldn't save workspace!");
         }
 
         workspace.setId(id);
-        workspaces.set(workspaces.indexOf(reference), workspace);
-
-        System.out.println("Workspace updated successfully!");
+        id = repository.save(workspace);
+        return id;
     }
 
-    public void deleteWorkspace(int id) {
-        List<Reservation> reservations = reservationService.getAllReservations();
-        if (reservations.stream().anyMatch(reservation -> reservation.getSpaceId() == id && reservation.getInterval().getEndTime().after(new Date()))) {
-            System.out.println("This workspace cannet be deleted because there are reservations on it!");
-            return;
-        }
-
-        workspaces.removeIf(workspace -> workspace.getId() == id);
-        System.out.println("Workspace deleted successfully!");
+    public boolean deleteWorkspace(int id) {
+        return repository.delete(id);
     }
 
     public boolean workspaceExists(int id) {
-        return workspaces.stream().anyMatch(workspace -> workspace.getId() == id);
+        return repository.getById(id).isPresent();
     }
 
-    public boolean isWorkspaceAvailable(int id, Interval interval) {
-        List<Reservation> reservations = reservationService.getAllReservations();
-        reservations = reservations.stream().filter(reservation -> reservation.getSpaceId() == id).collect(Collectors.toList());
-
-        return reservations.stream().noneMatch(reservation -> Interval.isOverlap(interval, reservation.getInterval()));
+    public boolean isAvailable(int id, Interval interval) {
+        return isAvailable.apply(id, interval);
     }
 }
